--- a/pom.xml
+++ b/pom.xml
@@ -6,16 +6,15 @@
   <build>
     <pluginManagement>
       <plugins>
-      
-       <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.1</version>
-          <configuration>
-          <Source>1.8</Source>
-          <target>1.8</target>
-            <!-- put your configurations here -->
-          </configuration>
+
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.8.1</version>
+            <configuration>
+                <source>7</source>
+                <target>7</target>
+            </configuration>
         </plugin>
         
         <plugin>
